# cf-workbench

./: .clang-format  .editorconfig  .gitignore  README.ko.md  README.md  cf-workbench.cmd  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
browser-extension/: content-script.js  manifest.json
cfw/: __init__.py  __main__.py  cli.py  codeforces.py  compare.py  config.py  doctor.py  runner.py  schema.py  server.py  storage.py  submit.py
docs/: competitive-companion-setup.md  statement-capture-extension.md  submit-prefill.md  troubleshooting.md
examples/: companion_payload.json
frontend/ide/: main.ts
scripts/: cfw-workbench.cmd  cfw.cmd  cfw.ps1  cfw_workbench_launcher.py
src/cf_workbench/: __init__.py  cli.py  codeforces_api.py  companion_server.py  compare.py  compiler.py  config.py  diffing.py  doctor.py  ide.py  models.py  paths.py  runner.py  schema.py  statement_capture.py  storage.py  submit.py  submit_prefill.py  sync.py  web_ui.py
templates/: main.cpp
templates/codeforces_cpp_templates/codeforces_cpp_templates/: README.md  TEMPLATE_INDEX.txt
tests/: test_browser_extension.py  test_cfw_alias.py  test_cli_workspace_management.py  test_codeforces_api.py  test_companion_payload.py  test_compare.py  test_config.py  test_diffing.py  test_doctor.py  test_ide.py  test_launcher.py  test_problem_id.py  test_runner.py  test_schema.py  test_statement_capture.py  test_storage.py  test_submit.py  test_sync.py  test_web_ui.py
tests/fixtures/: competitive_companion_cf954g.json
(+42 files in other folders)
